--- a/indexstyles.css
+++ b/indexstyles.css
@@ -129,21 +129,26 @@ h1 {
 }
 
 .main-buttons {
-    margin-top: 120px;
+    display: flex;
+    gap: 50px; /* 버튼 사이의 간격 */
+    justify-content: center; /* 가운데 정렬을 위한 설정 */
 }
 
-.main-buttons button {
-    background-color: #ffdd57;
-    border: none;
+.button {
+    display: inline-block;
     padding: 10px 20px;
-    margin: 0 30px;
-    cursor: pointer;
+    background-color: #fcff39; /* 원하는 색상으로 변경 */
+    color: #000000;
+    text-align: center;
+    text-decoration: none;
     border-radius: 5px;
-    border: 2px solid #000000;
+    font-size: 16px;
+    margin-top: 120px;
+    border: 2px solid #000000; /* 테두리 선 설정 */
 }
 
-.main-buttons button:hover {
-    background-color: #f0c844;
+.button:hover {
+    background-color: #ffffff; /* 원하는 호버 색상 */
 }
 
 /* R&D Status Section */
