--- a/rd_question_write_style.css
+++ b/rd_question_write_style.css
@@ -128,6 +128,8 @@ h1 {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-left: 600px;
+    margin-top: 150px;
 }
 
 .form-section h2 {
@@ -184,12 +186,24 @@ form textarea {
     color: #333;
 }
 
-/* Footer 스타일 */
+/* Footer */
 footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
+    position: fixed;
+    bottom: 0;
     width: 100%;
     text-align: center;
-    margin-top: auto;
+    padding: 20px 15px;
+    background-color: #333;
+    color: #fff;
+    font-size: 14px;
+}
+
+footer nav a {
+    color: #ddd;
+    margin: 0 10px;
+    text-decoration: none;
+}
+
+footer nav a:hover {
+    color: #fff;
 }
