--- a/rd_signupstyle.css
+++ b/rd_signupstyle.css
@@ -1,5 +1,5 @@
-/* 기본 스타일 초기화 */
-* {
+ /* 기본 스타일 초기화 */
+ * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -161,15 +161,15 @@ h1 {
     background-color: #cc7a00;
 }
 
-.login-link {
-    display: block;
-    margin-top: 10px;
+.login-link, .find-id-pw-link {
+    display: inline-block;
+    margin-top: 12px;
     color: #000;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 16px;
 }
 
-.login-link:hover {
+.login-link:hover, .find-id-pw-link:hover {
     text-decoration: underline;
 }
 
