--- a/indexstyles.css
+++ b/indexstyles.css
@@ -631,7 +631,7 @@ h1 {
 /* 데스크탑 화면용 스타일 */
 @media (min-width: 1200px) {
     .related-sites {
-        height: auto; /* 고정 높이 제거 */
+        height: 80vh; /* 고정 높이 제거 */
         padding: 3vh 8%; /* 넓은 패딩으로 조정 */
         background-size: cover; /* 이미지 크기 조정 */
     }
@@ -1224,29 +1224,29 @@ h1 {
 /* 데스크탑 화면용 스타일 */
 @media (min-width: 1200px) {
     .team {
-        padding: 2%;
+        padding: 1%;
         border: 1px solid #ddd;
         border-radius: 12px;
     }
 
     .team h3 {
-        font-size: 1.8rem; /* 데스크탑 화면에 맞는 폰트 크기 */
+        font-size: 1.4rem; /* 데스크탑 화면에 맞는 폰트 크기 */
         padding: 1%;
         width: 100%;
         margin: 0 0 2% 0;
     }
 
     .team-member {
-        width: 50vw; /* 데스크탑 화면에 맞는 멤버 카드 너비 */
+        width: 10vw; /* 데스크탑 화면에 맞는 멤버 카드 너비 */
         margin-top: 1%;
     }
 
     .team-member img {
-        width: 40%; /* 데스크탑 화면에 맞는 이미지 크기 */
+        width: 80%; /* 데스크탑 화면에 맞는 이미지 크기 */
     }
 
     .team-member p {
-        font-size: 1.1rem; /* 텍스트 크기 조정 */
+        font-size: 1rem; /* 텍스트 크기 조정 */
     }
 
     .info-button {
@@ -1255,7 +1255,7 @@ h1 {
     }
 
     .card-back {
-        max-height: 400px; /* 데스크탑 화면에서의 스크롤 영역 제한 */
+        max-height: 300px; /* 데스크탑 화면에서의 스크롤 영역 제한 */
     }
 }
 
@@ -1329,12 +1329,16 @@ h1 {
 /* 데스크탑 화면용 스타일 */
 @media (min-width: 1200px) {
     .qna th, .qna td {
-        font-size: 1.5rem; /* 데스크탑 화면에 맞는 글씨 크기 */
-        padding: 1.2vw; /* 넉넉한 패딩 */
+        font-size: 1rem; /* 데스크탑 화면에 맞는 글씨 크기 */
+        padding: 0.4vw; /* 넉넉한 패딩 */
     }
     .more-button {
-        font-size: 1.2rem; /* 데스크탑 화면에 맞는 버튼 텍스트 크기 */
-        padding: 1vw 2.5vw; /* 버튼 패딩 조정 */
+        font-size: 1rem; /* 데스크탑 화면에 맞는 버튼 텍스트 크기 */
+        padding: 1vw 0.5vw; /* 버튼 패딩 조정 */
+        margin-top: 0.5vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
