--- a/rd_loginstyle.css
+++ b/rd_loginstyle.css
@@ -174,6 +174,22 @@ h1 {
     text-decoration: underline;
 }
 
+/* 가입하기 및 ID/PW 찾기 링크 같은 라인에 표시 */
+.signup-link,
+.find-id-pw-link {
+    display: inline-block;
+    margin: 0 5px; /* 링크 간 간격 설정 */
+    color: #000;
+    text-decoration: none;
+    font-size: 14px;
+    margin-top: 4%;
+}
+
+.signup-link:hover,
+.find-id-pw-link:hover {
+    text-decoration: underline;
+}
+
 /* Footer */
 footer {
     text-align: center;
